minor semantic fixes

--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,14 @@
     <main>
       <section>
         <address>
-          Guldbergsgade 29N 2200 Copenhagen <br />
-          <br />
-          Phone no.:<a href="tel:20825370" title="Restaurant KEA"> 20 82 53 70 </a><br />
-          <br />
-          E-mail: <a href="mailto:info@restaurantkea.dk">info@restaurantkea.dk</a>
+          <p>Guldbergsgade 29N, 2200 Copenhagen</p>
+          <p>Phone no.: <a href="tel:20825370" title="Phone Restaurant KEA">20 82 53 70</a></p>
+          <p>
+            E-mail:
+            <a href="mailto:info@restaurantkea.dk" title="Email Restaurant KEA"
+              >info@restaurantkea.dk</a
+            >
+          </p>
         </address>
       </section>
       <section>
@@ -61,7 +64,7 @@
               <input type="datetime-local" name="date" id="date" /> </label
             ><br />
             <label for="textarea"> Further information </label><br />
-            <textarea name="textarea" id="textarea" cols="21" rows="2"></textarea>
+            <textarea name="textarea" id="textarea"></textarea>
             <br />
             <input type="submit" value="Send" />
           </fieldset>
