--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
           Dining at Restaurant KEA has truly been one of the greatest experiences of my life. Words
           cannot express the pleasure that I felt while tasting these amazing flavours. It makes all
           other restaurants pale in comparison, in Denmark and elsewhere.
-          <br />
-          <br />
-          - Mette J. Christensen, <em>The Food Connoisseur</em>
+          <p>- Mette J. Christensen, <em>The Food Connoisseur</em></p>
         </blockquote>
       </section>
     </main>
