--- a/index.html
+++ b/index.html
@@ -3,48 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=$, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Home</title>
   </head>
   <body>
     <header>
-      <h1>Restaurant KEA</h1>
+      <div class="headerTitle"><h1>Restaurant KEA</h1></div>
       <nav>
         <ul>
-          <li><a href="index.html" title="Home page">Home</a></li>
-          <li><a href="menu.html" title="Food menu">Menu</a></li>
-          <li><a href="contact.html" title="Contact us">Contact</a></li>
+          <li><a href="./index.html" class="active" title="Home page">Home</a></li>
+          <li><a href="./menu.html" title="Food menu">Menu</a></li>
+          <li><a href="./contact.html" title="Contact us">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section>
-        <article>
-          <p>
-            We provide a wide variety of fine dishes and beverages at moderate prices. Located in
-            one of the trendiest areas of Copenhagen, Restaurant KEA has been at the forefront of
-            Denmark's culinary life for the past decade. Let us take you on a journey of taste that
-            you will never forget. You will not only not regret it, but you will feel an urge to
-            spread the good news around to your friends and family. So amazing is the food
-            experience at Restaurant KEA. We look forward to serving you.
-          </p>
-        </article>
-        <article>
-          <ul>
-            <li>High quality food</li>
-            <li>Excellent location</li>
-            <li>Attentive personnel</li>
-            <li>Wonderful music</li>
-            <li>Amazing wines</li>
-            <li>Reasonable prices</li>
-          </ul>
-        </article>
-      </section>
-      <section>
-        <img
-          src="img/kea_restaurant.jpg"
-          alt="interior view of a fully booked restaurant in dim warm lighting"
-        />
-      </section>
+      <div class="introduction">
+        <section>
+          <article>
+            <p>
+              We provide a wide variety of fine dishes and beverages at moderate prices. Located in
+              one of the trendiest areas of Copenhagen, Restaurant KEA has been at the forefront of
+              Denmark's culinary life for the past decade. Let us take you on a journey of taste
+              that you will never forget. You will not only not regret it, but you will feel an urge
+              to spread the good news around to your friends and family. So amazing is the food
+              experience at Restaurant KEA. We look forward to serving you.
+            </p>
+          </article>
+          <article class="highlightList">
+            <ul>
+              <li>High quality food</li>
+              <li>Excellent location</li>
+              <li>Attentive personnel</li>
+              <li>Wonderful music</li>
+              <li>Amazing wines</li>
+              <li>Reasonable prices</li>
+            </ul>
+          </article>
+        </section>
+        <section class="sectionImg">
+          <img
+            src="img/kea_restaurant.jpg"
+            alt="interior view of a fully booked restaurant in dim warm lighting"
+          />
+        </section>
+      </div>
       <section>
         <blockquote>
           Dining at Restaurant KEA has truly been one of the greatest experiences of my life. Words
