--- a/menu.html
+++ b/menu.html
@@ -3,47 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Food menu</title>
   </head>
   <body>
     <header>
-      <h1>Restaurant KEA</h1>
+      <div class="headerTitle"><h1>Restaurant KEA</h1></div>
       <nav>
         <ul>
           <li><a href="index.html" title="Home page">Home</a></li>
-          <li><a href="menu.html" title="Food menu">Menu</a></li>
+          <li><a href="menu.html" class="active" title="Food menu">Menu</a></li>
           <li><a href="contact.html" title="Contact us">Contact</a></li>
         </ul>
       </nav>
     </header>
-    <main>
-      <section>
+    <main id="menu">
+      <section class="menuItem">
         <article>
           <h2>Turing Salad</h2>
           <p>
             Sun-dried tomatos and feta cheese on top of a thin layer of lettuce. Choose between our
             balsamic, mustard or barbecue dressing.
           </p>
-          <p>65 kr.</p>
+          <div class="menuItemPrice"><p>65 kr.</p></div>
         </article>
-        <article><img src="img/salad.jpg" alt="Mixed green salad with rye bread" /></article>
+        <article class="menuItemImg">
+          <img src="img/salad.jpg" alt="Mixed green salad with rye bread" />
+        </article>
       </section>
-      <section>
+      <section class="menuItem">
         <article>
           <h2>Pizza Berners-Lee</h2>
           <p>
             Tomato, mozzarella, pepperoni and rucula. Choose between our thin or thick bread base.
           </p>
-          <p>80 kr.</p>
+          <div class="menuItemPrice"><p>80 kr.</p></div>
         </article>
-        <article>
+        <article class="menuItemImg">
           <img
             src="img/pizza.jpg"
             alt="Cheesy pizza with tomatoes, mushrooms, onion and green pepper"
           />
         </article>
       </section>
-      <section>
+      <section class="menuItem">
         <article>
           <h2>Codd Hamburger</h2>
           <p>
@@ -51,20 +54,24 @@
             love. Which sauce do you prefer: BBQ, Dijon or mayonaisse? It comes with French fries
             and coleslaw salad.
           </p>
-          <p>115 kr.</p>
+          <div class="menuItemPrice"><p>115 kr.</p></div>
         </article>
-        <article><img src="img/burger.jpg" alt="Cheeseburger with tomatoes and lettuce" /></article>
+        <article class="menuItemImg">
+          <img src="img/burger.jpg" alt="Cheeseburger with tomatoes and lettuce" />
+        </article>
       </section>
-      <section>
+      <section class="menuItem">
         <article>
           <h2>Cerf Cream</h2>
           <p>
             Delightful strawberry icecream topped with actual strawberries. In cone or vase.
             Multiple toppings available.
           </p>
-          <p>65 kr.</p>
+          <div class="menuItemPrice"><p>65 kr.</p></div>
         </article>
-        <article><img src="" alt="Strawberry icecream with strawberries on top" /></article>
+        <article class="menuItemImg">
+          <img src="" alt="Strawberry icecream with strawberries on top" />
+        </article>
       </section>
     </main>
     <footer>
